<resources>
    <string name="app_name">Game Databases</string>
    <string name="title_favorite">Favorites</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="poster">poster</string>
    <string name="name">Name</string>
    <string name="add_to_favorites">Add To Favorites</string>
    <string name="remove_from_favorites">Remove From Favorites</string>
    <string name="no_data">NO DATA</string>
    <string name="release_date_s">Release Date: %s</string>
    <string name="rating_s">Rating: %s</string>
    <string name="metacritic_d">Metacritic: %d</string>
</resources>