<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.DetailFragment"
    android:background="@color/white"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:layout_gravity="center"/>
    </FrameLayout>

    <ImageView
        android:id="@+id/iv_poster"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:contentDescription="@string/poster"
        tools:src="@tools:sample/backgrounds/scenic"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/tv_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/release_date_s"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating_s"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_metacritic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/metacritic_d"
            android:textColor="@color/black" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_favorite"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        app:cornerRadius="10dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/black"
        app:icon="@drawable/ic_favorite_white"
        app:iconTint="@color/white"
        android:text="@string/add_to_favorites"
        android:textColor="@color/white"/>
</LinearLayout>